# slhdsa-sdk

./: .gitignore  Architecture.md  Cargo.toml  README.md  package-lock.json  package.json
bench/: README.md
bench/kotlin/: BenchUniffi.kt  run.sh
bench/napi/: bench.ts  run.sh
bench/python/: bench.py  run.sh
bench/rust/: Cargo.toml  run.sh
bench/ts/: bench.ts  run.sh
bindings/cpp/: slh_dsa_uniffi.cpp
bindings/python/: libslh_dsa_uniffi.dylib  slh_dsa_uniffi.py
bindings/swift/: slh_dsa_uniffi.swift  slh_dsa_uniffiFFI.h  slh_dsa_uniffiFFI.modulemap
bindings/ts/: slh_dsa_uniffi-ffi.ts  slh_dsa_uniffi.ts
example-project/SlhDsaBenchApp/: App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json  ubrn.yml
react-native-slh-dsa/: NativeSlhDsa.ts  README.md  SlhDsa.podspec  package-lock.json  package.json  react-native.config.js  ubrn.yml
react-native-slh-dsa/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
react-native-slh-dsa/cpp/: react-native-slh-dsa.cpp  react-native-slh-dsa.h
react-native-slh-dsa/ios/: SlhDsa.h  SlhDsa.mm
react-native-slh-dsa/scripts/: fix-android-codegen.sh
react-native-slh-dsa/slh_dsa_uniffi.xcframework/: Info.plist
scripts/: bench.sh  build-napi.sh  build.sh  gen-bindings.sh  install_deps.sh  run-tests.sh  windows-setup.md
slh-dsa-core/: Cargo.toml
slh-dsa-core/src/: lib.rs
slh-dsa-ffi/: Cargo.toml  build.rs
slh-dsa-ffi/include/: slh_dsa.h
slh-dsa-ffi/src/: lib.rs
slh-dsa-napi/: Cargo.toml  index.d.ts  index.js  package.json
slh-dsa-napi/src/: lib.rs
slh-dsa-uniffi/: Cargo.toml
(+36 files in other folders)
